fixed some layout issues and fonts

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,16 @@
 /*
+font-family:'Trade Gothic W01 Roman';
+font-family:'Trade Gothic W01 Obl';
+font-family:'TradeGothicW01-BoldObl';
+font-family:'Trade Gothic W01 Bold 2';
+font-family:'TradeGothicW01-Bold2Obl';
+font-family:'Trade Gothic W01 Cn 18';
+font-family:'TradeGothicW01-Cn18Obl';
+font-family:'TradeGothicW01-BoldCn20 675334';
+font-family:'TradeGothicW01-BoldCn20 675337';
+*/
+
+/*
 	Global
 */
 html, body { width: 100%; height: 100%; background-color: #FFFFFF; }
