--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,17 @@
 /*
+	font-family:'Trade Gothic W01 Roman';
+	font-family:'Trade Gothic W01 Obl';
+	font-family:'TradeGothicW01-BoldObl';
+	font-family:'Trade Gothic W01 Bold 2';
+	font-family:'TradeGothicW01-Bold2Obl';
+	font-family:'Trade Gothic W01 Cn 18';
+	font-family:'TradeGothicW01-Cn18Obl';
+	font-family:'TradeGothicW01-BoldCn20 675334';
+	font-family:'TradeGothicW01-BoldCn20 675337';
+*/
+
+
+/*
 	Global
 */
 html, body { width: 100%; height: 100%; background-color: #FFFFFF; overflow: hidden; }
@@ -16,8 +29,8 @@ img { display: block; }
 	Header
 */
 #header { width: 100%; height: 0px; background: #000000; position: absolute; top: 0px; left: 0px; position: relative; z-index: 10; }
-#logo { overflow: hidden; width: 215px; height: 116px; display: block; position: absolute; bottom: -116px; left: 0px; cursor: pointer; opacity: 0; background: url("../img/mobile/logo.png") top left no-repeat; background-position: 0px 0px; }
-#logo.open { background-position: -215px 0px; }
+#logo { overflow: hidden; width: 315px; height: 146px; display: block; position: absolute; bottom: -146px; left: 0px; cursor: pointer; opacity: 0; background: url("../img/mobile/logo.png") top left no-repeat; background-position: 0px 0px; background-size: 200% 100%; }
+#logo.open { background-position: -315px 0px; }
 #header .content {
 	display: none; 
 	height: 100%;
@@ -25,21 +38,23 @@ img { display: block; }
 	padding-top: 169px;
 }
 #header .content h1 { color: #FFFFFF; text-align: center; margin: 44px 0px; font: normal 60px 'TradeGothicW01-BoldCn20 675334'; } /* TradeGothicLTStd Cn18 */
-#header .content p { color: #FFFFFF; text-align: center; width: 451px; margin: 0 auto; font: normal 20px 'Trade Gothic W01 Cn 18'; }
+#header .content p { color: #FFFFFF; text-align: center; width: 520px; margin: 0 auto; font: normal 23px 'TradeGothicW01-BoldCn20 675334'; }
 #header .content p.padding { margin-bottom: 30px; }
+#header .content p.center { text-align: justify; }
+#header .content h1 a { text-decoration: underline; color: #FFFFFF; }
 
 /*
 
 	Videos
 */
-#wrapper { width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; overflow-y: scroll; z-index: 1; padding-top: 155px; -webkit-overflow-scrolling: touch; }
+#wrapper { width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; overflow-y: scroll; z-index: 1; padding-top: 188px; -webkit-overflow-scrolling: touch; }
 
-.video { width: 584px; height: 432px; position: relative; margin: 0 auto; margin-bottom: 50px; }
+.video { width: 584px; height: 432px; position: relative; margin: 0 auto; margin-bottom: 59px; }
 .video .loading-wrapper { position: absolute; top: 0px; left: 0px; width: 584px; height: 328px; z-index: 1; background-color: #F5F5F5; }
 .video .loading-wrapper img { position: absolute; top: 132px; left: 263px; z-index: 1; width: 48px; height: 48px; }
-.video .thumb { position: absolute; top: 0px; left: 0px; width: 584px; height: 328px; margin-bottom: 26px; z-index: 2; }
-.video .title { position: absolute; top: 359px; left: 0px; width: 100%; text-align: center; color: #000000; text-transform: uppercase; opacity: .7; }
-.video .title .main { font: normal 20px "TradeGothicW01-BoldCn20 675334"; }
-.video .title .it { font-weight: normal; font: normal 20px "TradeGothicW01-Cn18Obl"; }
-.video .role-wrapper { width: 100%; position: absolute; top: 410px; left: 0px; text-align: center; }
+.video .thumb { position: absolute; top: 0px; left: 0px; width: 584px; height: 328px; z-index: 2; }
+.video .title { position: absolute; top: 358px; left: 0px; width: 100%; text-align: center; color: #000000; text-transform: uppercase; opacity: .7; }
+.video .title .main { font: normal 26px "TradeGothicW01-BoldCn20 675334"; }
+.video .title .it { font-weight: normal; font: normal 26px "TradeGothicW01-BoldCn20 675337"; }
+.video .role-wrapper { width: 100%; position: absolute; top: 420px; left: 0px; text-align: center; }
 .video .role { padding: 9px 20px; display: inline; background-color: #000000; color: #FFFFFF; text-transform: uppercase; font: normal 18px "TradeGothicW01-BoldCn20 675334"; margin: 0 auto; }
